--- a/index.html
+++ b/index.html
@@ -126,12 +126,6 @@
               loading="lazy"
             />
           </div>
-          <div id="imageModal" class="profile-modal">
-            <span class="profile-modal-close" onclick="closeModal()"
-              >&times;</span
-            >
-            <img class="profile-modal-content" id="fullImage" loading="lazy" />
-          </div>
         </div>
         <blockquote class="about-paragraph">
           <p>
@@ -479,14 +473,6 @@
               <ul class="soc-elements">
                 <li>
                   <img
-                    src="images/phone icon.png"
-                    alt="Phone Icon"
-                    loading="lazy"
-                  />
-                  <span>+63 918 290 5615</span>
-                </li>
-                <li>
-                  <img
                     src="images/email icon.png"
                     alt="Email Icon"
                     loading="lazy"
@@ -549,11 +535,39 @@
                     >LeetCode</a
                   >
                 </li>
+                <li>
+                  <img
+                    src="images/hackerrank icon.png"
+                    alt="HackerRank Icon"
+                    loading="lazy"
+                  />
+                  <a href="https://www.hackerrank.com/profile/NeilPatrick" target="_blank"
+                    >HackerRank</a
+                  >
+                </li>
+                <li>
+                  <img
+                    src="images/codewars icon.png"
+                    alt="Codewars Icon"
+                    loading="lazy"
+                  />
+                  <a href="https://www.codewars.com/users/Neil%20Patrick" target="_blank"
+                    >Codewars</a
+                  >
+                </li>
               </ul>
             </div>
             <div class="personal">
               <h4>Personal</h4>
               <ul class="soc-elements">
+                <li>
+                  <img
+                    src="images/phone icon.png"
+                    alt="Phone Icon"
+                    loading="lazy"
+                  />
+                  <span>+63 918 290 5615</span>
+                </li>
                 <li>
                   <img
                     src="images/facebook icon.png"
