Update main.css and index.html: change skill-item hover color and add MySQL and SQL skills

--- a/index.html
+++ b/index.html
@@ -309,26 +309,6 @@
             <h1 style="font-size: x-large">Web Development</h1>
           </li>
           <li class="skill-item">
-            <span class="skill-name">Canva</span>
-            <span class="skill-icon">
-              <img
-                src="images/canva icon.png"
-                alt="Canva Icon"
-                loading="lazy"
-              />
-            </span>
-          </li>
-          <li class="skill-item">
-            <span class="skill-name">Figma</span>
-            <span class="skill-icon">
-              <img
-                src="images/figma icon.png"
-                alt="Figma Icon"
-                loading="lazy"
-              />
-            </span>
-          </li>
-          <li class="skill-item">
             <span class="skill-name">HTML</span>
             <span class="skill-icon">
               <img src="images/html icon.png" alt="HTML Icon" loading="lazy" />
@@ -367,6 +347,25 @@
             <span class="skill-name">Java</span>
             <span class="skill-icon">
               <img src="images/java icon.png" alt="Java Icon" loading="lazy" />
+            </span>
+          </li>
+          <li class="skill-item">
+            <span class="skill-name">SQL</span>
+            <span class="skill-icon">
+              <img src="images/sql icon.png" alt="SQL Icon" loading="lazy" />
+            </span>
+          </li>
+          <li>
+            <h1 style="font-size: x-large">RDBMS</h1>
+          </li>
+          <li class="skill-item">
+            <span class="skill-name">MySQL</span>
+            <span class="skill-icon">
+              <img
+                src="images/mysql icon.png"
+                alt="MySQL Icon"
+                loading="lazy"
+              />
             </span>
           </li>
         </ul>
@@ -488,7 +487,7 @@
                     loading="lazy"
                   />
                   <a
-                    href="https://www.linkedin.com/in/neil-patrick-pajadan-b3a40b337/"
+                    href="https://www.linkedin.com/in/neil-patrick-pajadan-084360250/"
                     target="_blank"
                     >LinkedIn</a
                   >
@@ -541,7 +540,9 @@
                     alt="HackerRank Icon"
                     loading="lazy"
                   />
-                  <a href="https://www.hackerrank.com/profile/NeilPatrick" target="_blank"
+                  <a
+                    href="https://www.hackerrank.com/profile/NeilPatrick"
+                    target="_blank"
                     >HackerRank</a
                   >
                 </li>
@@ -551,7 +552,9 @@
                     alt="Codewars Icon"
                     loading="lazy"
                   />
-                  <a href="https://www.codewars.com/users/Neil%20Patrick" target="_blank"
+                  <a
+                    href="https://www.codewars.com/users/Neil%20Patrick"
+                    target="_blank"
                     >Codewars</a
                   >
                 </li>
