Add project details for Math Quest and Aero Quest to index.html

--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
         </h1>
         <div class="project-wrapper">
           <article class="project">
-            <h2>Math-Quest</h2>
+            <h2>Math Quest</h2>
             <img
               src="images/Project 1 Thumbnail.png"
               alt="Project 1 Thumbnail"
@@ -400,6 +400,44 @@
               href="https://www.youtube.com/watch?v=s7MLZh8reNc"
               target="_blank"
               >Watch Video</a
+            >
+          </article>
+          <article class="project">
+            <h2>Aero Quest</h2>
+            <img
+              src="images/Project 2 Thumbnail.png"
+              alt="Project 2 Thumbnail"
+              loading="lazy"
+            />
+            <p>
+              Aero Quest is a robust C# Windows Forms Application designed to
+              manage flight information efficiently. Tailored for airlines, it
+              streamlines tasks like flight scheduling, passenger tracking, and
+              managing aircraft, ensuring smooth operations for both staff and
+              travelers.
+            </p>
+            <a href="https://github.com/Neil-Patrick/Aero-Quest" target="_blank"
+              >View Repository</a
+            >
+          </article>
+          <article class="project">
+            <h2>Shelfie Haven</h2>
+            <img
+              src="images/Project 3 Thumbnail.png"
+              alt="Project 3 Thumbnail"
+              loading="lazy"
+            />
+            <p>
+              Shelfie Haven is an intuitive C# Console Application designed to
+              help users efficiently manage book borrowing transactions. The
+              system is tailored for libraries and book enthusiasts,
+              streamlining the process of borrowing, returning, and tracking
+              books with ease.
+            </p>
+            <a
+              href="https://github.com/Neil-Patrick/Shelfie-Haven"
+              target="_blank"
+              >View Repository</a
             >
           </article>
         </div>
