--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
               loading="lazy"
             />
             <p>
-              Shelfie Haven is an intuitive C# Console Application designed to
+              Shelfie Haven is a Java Console Application designed to
               help users efficiently manage book borrowing transactions. The
               system is tailored for libraries and book enthusiasts,
               streamlining the process of borrowing, returning, and tracking
