--- a/index.html
+++ b/index.html
@@ -247,13 +247,33 @@
             />
             <div class="cert-details">
               <p class="cert-name">
-                Title: Introduction to Visual Graphic Design (VGD)
+                Title: Visual Graphic Design (NC III): Introduction to Visual
+                Graphic Design
               </p>
               <p class="cert-issuer">
                 Issued by: Technical Education and Skills Development Authority
                 (TESDA)
               </p>
               <p class="cert-date">Date: October 25, 2024</p>
+            </div>
+          </div>
+          <div class="certificates-gallery-item">
+            <img
+              src="images/dev design for ux.png"
+              alt="Developing Designs for UX"
+              onclick="certopenModal(this)"
+              loading="lazy"
+            />
+            <div class="cert-details">
+              <p class="cert-name">
+                Title: Visual Graphic Design (NC III): Developing Designs for
+                User Experience
+              </p>
+              <p class="cert-issuer">
+                Issued by: Technical Education and Skills Development Authority
+                (TESDA)
+              </p>
+              <p class="cert-date">Date: April 20, 2025</p>
             </div>
           </div>
           <div class="certificates-gallery-item">
@@ -428,7 +448,7 @@
               loading="lazy"
             />
             <p>
-              Shelfie Haven is a Java Console Application designed to
+              Shelfie Haven is an intuitive C# Console Application designed to
               help users efficiently manage book borrowing transactions. The
               system is tailored for libraries and book enthusiasts,
               streamlining the process of borrowing, returning, and tracking
