--- a/index.html
+++ b/index.html
@@ -316,6 +316,25 @@
           </div>
           <div class="certificates-gallery-item">
             <img
+              src="images/dev design for print.png"
+              alt="Developing Designs for UX"
+              onclick="certopenModal(this)"
+              loading="lazy"
+            />
+            <div class="cert-details">
+              <p class="cert-name">
+                Title: Visual Graphic Design (NC III): Developing Designs for
+                Print Media
+              </p>
+              <p class="cert-issuer">
+                Issued by: Technical Education and Skills Development Authority
+                (TESDA)
+              </p>
+              <p class="cert-date">Date: May 07, 2025</p>
+            </div>
+          </div>
+          <div class="certificates-gallery-item">
+            <img
               src="images/js essentials 1.png"
               alt="JS Essentials 1"
               onclick="certopenModal(this)"
