--- a/index.html
+++ b/index.html
@@ -335,6 +335,25 @@
           </div>
           <div class="certificates-gallery-item">
             <img
+              src="images/dev design for packaging.png"
+              alt="Developing Designs for UX"
+              onclick="certopenModal(this)"
+              loading="lazy"
+            />
+            <div class="cert-details">
+              <p class="cert-name">
+                Title: Visual Graphic Design (NC III): Developing Designs for
+                Product Packaging
+              </p>
+              <p class="cert-issuer">
+                Issued by: Technical Education and Skills Development Authority
+                (TESDA)
+              </p>
+              <p class="cert-date">Date: May 08, 2025</p>
+            </div>
+          </div>
+          <div class="certificates-gallery-item">
+            <img
               src="images/js essentials 1.png"
               alt="JS Essentials 1"
               onclick="certopenModal(this)"
@@ -430,6 +449,18 @@
             <span class="skill-name">SQL</span>
             <span class="skill-icon">
               <img src="images/sql icon.png" alt="SQL Icon" loading="lazy" />
+            </span>
+          </li>
+          <li class="skill-item">
+            <span class="skill-name">PHP</span>
+            <span class="skill-icon">
+              <img src="images/php icon.png" alt="Java Icon" loading="lazy" />
+            </span>
+          </li>
+          <li class="skill-item">
+            <span class="skill-name">Python</span>
+            <span class="skill-icon">
+              <img src="images/python icon.png" alt="Java Icon" loading="lazy" />
             </span>
           </li>
           <li>
