--- a/index.html
+++ b/index.html
@@ -238,6 +238,36 @@
               <p class="cert-date">Date: October 26, 2024</p>
             </div>
           </div>
+                    <div class="certificates-gallery-item">
+            <img
+              src="images/js essentials 1.png"
+              alt="JS Essentials 1"
+              onclick="certopenModal(this)"
+              loading="lazy"
+            />
+            <div class="cert-details">
+              <p class="cert-name">Title: JavaScript Essentials 1</p>
+              <p class="cert-issuer">
+                Issued by: Cisco Networking Academy, OpenEDG JS Institute
+              </p>
+              <p class="cert-date">Date: September 22, 2024</p>
+            </div>
+          </div>
+          <div class="certificates-gallery-item">
+            <img
+              src="images/js essentials 2.png"
+              alt="JS Essentials 2"
+              onclick="certopenModal(this)"
+              loading="lazy"
+            />
+            <div class="cert-details">
+              <p class="cert-name">Title: JavaScript Essentials 2</p>
+              <p class="cert-issuer">
+                Issued by: Cisco Networking Academy, OpenEDG JS Institute
+              </p>
+              <p class="cert-date">Date: October 23, 2024</p>
+            </div>
+          </div>
           <div class="certificates-gallery-item">
             <img
               src="images/intro to vgd.png"
@@ -354,32 +384,21 @@
           </div>
           <div class="certificates-gallery-item">
             <img
-              src="images/js essentials 1.png"
-              alt="JS Essentials 1"
+              src="images/designing booth-display.png"
+              alt="Developing Designs for UX"
               onclick="certopenModal(this)"
               loading="lazy"
             />
             <div class="cert-details">
-              <p class="cert-name">Title: JavaScript Essentials 1</p>
-              <p class="cert-issuer">
-                Issued by: Cisco Networking Academy, OpenEDG JS Institute
+              <p class="cert-name">
+                Title: Visual Graphic Design (NC III): Designing Booth and Product/Window 
+                Display
               </p>
-              <p class="cert-date">Date: September 22, 2024</p>
-            </div>
-          </div>
-          <div class="certificates-gallery-item">
-            <img
-              src="images/js essentials 2.png"
-              alt="JS Essentials 2"
-              onclick="certopenModal(this)"
-              loading="lazy"
-            />
-            <div class="cert-details">
-              <p class="cert-name">Title: JavaScript Essentials 2</p>
               <p class="cert-issuer">
-                Issued by: Cisco Networking Academy, OpenEDG JS Institute
+                Issued by: Technical Education and Skills Development Authority
+                (TESDA)
               </p>
-              <p class="cert-date">Date: October 23, 2024</p>
+              <p class="cert-date">Date: May 13, 2025</p>
             </div>
           </div>
         </div>
